compiler/tests/en/errors/void_return.salam
// EXPECT: E049
func f() : void:
    ret 5
end

func main:
    f()
end
